...
            <point key="canvasLocation" x="-958.5" y="25.5"/>
        </scene>
        <!--Diary-->
        <scene sceneID="fQy-A1-pVW">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="geJ-sP-z8e" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Diary" image="DiaryIcon" id="wTe-HP-MS6"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oQZ-fR-p60">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="361.5" y="831.5"/>
        </scene>
        <!--Preferences-->
        <scene sceneID="qW0-Uj-rbL">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jTj-AP-g5i" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Preferences" image="PreferencesIcon" id="9S2-fP-E8K"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sHB-xx-dxt">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MG1-tr-ibx">
                                <rect key="frame" x="52" y="161" width="270" height="346"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xGq-kq-CWI">
                                        <rect key="frame" x="13" y="77" width="245" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="245" id="ZMt-CT-Gt9"/>
                                            <constraint firstAttribute="height" constant="30" id="wFN-wY-o9i"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <constraints>
                                            <constraint firstAttribute="width" constant="245" id="b30-zj-ftD"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kN1-2w-82k">
                                        <rect key="frame" x="13" y="130" width="245" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="245" id="4es-4Z-o6W"/>
                                            <constraint firstAttribute="height" constant="30" id="Wxy-yw-49i"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="4Vo-Jo-yoQ"/>
                                            <constraint firstAttribute="width" constant="58" id="S1s-4j-9oI"/>
                                            <constraint firstAttribute="height" constant="30" id="X2e-Mt-M23"/>
                                            <constraint firstAttribute="width" constant="58" id="Y3X-1r-pVf"/>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="yFf-3e-4Hc"/>
                                        </constraints>
                                        <state key="normal" title="Login"/>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="4Vo-Jo-yoQ"/>
                                                <exclude reference="S1s-4j-9oI"/>
                                                <exclude reference="X2e-Mt-M23"/>
                                                <exclude reference="yFf-3e-4Hc"/>
...
                    <view key="view" contentMode="scaleToFill" id="IeA-dE-LzF">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k6e-dY-pgO">
                                <rect key="frame" x="296" y="573" width="55" height="30"/>
                                <state key="normal" title="Log Out"/>
                                <connections>
                                    <action selector="logoutButtonPressed:" destination="1AC-Pa-W6a" eventType="touchUpInside" id="xv7-pr-KyZ"/>
                                </connections>
                            </button>
                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="py3-D7-wI8" customClass="MacroSlider" customModule="Dart_Mouth" customModuleProvider="target">
                                <rect key="frame" x="16" y="326" width="343" height="246"/>
...
