...
class PreviousMealsAddViewController: UIViewController, UITableViewDataSource,
    UITableViewDelegate {
    
    // MARK: - Local Constants
    
    private struct Identifiers {
        static let Title = "Add Food"
        static let AddButtonText = "Add"
        static let CancelButtonText = "Cancel"
        static let addToDiaryButtonPressed = "addToDiaryButtonPressed:"
        static let cancelButtonPressed = "cancelButtonPressed:"
        static let Cell = "PastMealEntryCell"
    }
    
...
